{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 148,
  "lineage": "6da23905-de48-800e-558c-d6896d714f83",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:969505754201:security-group/sg-0f7de395777277cec",
            "description": "rabbitmq-1",
            "filter": null,
            "id": "sg-0f7de395777277cec",
            "name": "rabbitmq-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-5a6ebf3c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:969505754201:subnet/subnet-6e41d562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-6e41d562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "969505754201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-5a6ebf3c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "pulsar_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:969505754201:vpc/vpc-5a6ebf3c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-6008f308",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-cfff37a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-5a6ebf3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-dd2529bb",
            "owner_id": "969505754201"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:969505754201:loadbalancer/pulsar-elb",
            "availability_zones": [
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "desync_mitigation_mode": "defensive",
            "dns_name": "pulsar-elb-547112848.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "pulsar-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0894b9eb9a05a9070"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6650,
                "instance_protocol": "tcp",
                "lb_port": 6650,
                "lb_protocol": "tcp"
              },
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              }
            ],
            "name": "pulsar-elb",
            "security_groups": [
              "sg-0d2dad9cf7be28b35"
            ],
            "source_security_group": "969505754201/pulsar-elb",
            "source_security_group_id": "sg-0d2dad9cf7be28b35",
            "subnets": [
              "subnet-6e41d562"
            ],
            "tags": {
              "Name": "Pulsar-Load-Balancer"
            },
            "tags_all": {
              "Name": "Pulsar-Load-Balancer"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.proxy",
            "aws_key_pair.default",
            "aws_security_group.elb",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "data.aws_vpc.pulsar_vpc",
            "random_id.key_pair_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bookie",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-07999c530132fb345",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07999c530132fb345",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0800b1c1dcb7117b2",
            "private_dns": "ip-172-31-94-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.174",
            "public_dns": "ec2-44-200-114-156.compute-1.amazonaws.com",
            "public_ip": "44.200.114.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051a9cce243dcb0a8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "bookie-1"
            },
            "tags_all": {
              "Name": "bookie-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-063c1dd7be90ffbd5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c1dd7be90ffbd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07ba735e9c1cc3f1c",
            "private_dns": "ip-172-31-86-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.86.5",
            "public_dns": "ec2-34-229-132-250.compute-1.amazonaws.com",
            "public_ip": "34.229.132.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041a26c694ec79560",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "bookie-2"
            },
            "tags_all": {
              "Name": "bookie-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-054ddbb5a7fbc3c17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054ddbb5a7fbc3c17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0740954243b980577",
            "private_dns": "ip-172-31-89-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.22",
            "public_dns": "ec2-3-230-159-146.compute-1.amazonaws.com",
            "public_ip": "3.230.159.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9bb1d59b56d85ea",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "bookie-3"
            },
            "tags_all": {
              "Name": "bookie-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "broker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-080d7c739d5bf3663",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080d7c739d5bf3663",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a5557d0e7d5f9cc",
            "private_dns": "ip-172-31-89-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.27",
            "public_dns": "ec2-35-175-121-249.compute-1.amazonaws.com",
            "public_ip": "35.175.121.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069b3d8636f67791a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "broker-1"
            },
            "tags_all": {
              "Name": "broker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-03f52bf6265d5da53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f52bf6265d5da53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008f2c10d07c87620",
            "private_dns": "ip-172-31-86-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.86.127",
            "public_dns": "ec2-34-239-166-148.compute-1.amazonaws.com",
            "public_ip": "34.239.166.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f21d96f00a7ada2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "broker-2"
            },
            "tags_all": {
              "Name": "broker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-0894b9eb9a05a9070",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0894b9eb9a05a9070",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07039cbfacabd01c4",
            "private_dns": "ip-172-31-83-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.35",
            "public_dns": "ec2-3-239-98-154.compute-1.amazonaws.com",
            "public_ip": "3.239.98.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08843aeb95fa25f1f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "proxy-1"
            },
            "tags_all": {
              "Name": "proxy-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-07d3ca98da8b17cb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d3ca98da8b17cb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7dfd4153b4e6067",
            "private_dns": "ip-172-31-84-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.84.251",
            "public_dns": "ec2-3-236-207-200.compute-1.amazonaws.com",
            "public_ip": "3.236.207.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07f030baedf43de64",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "zookeeper-1"
            },
            "tags_all": {
              "Name": "zookeeper-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-092f79a3b8c1fd857",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092f79a3b8c1fd857",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f390dcee7e0516d",
            "private_dns": "ip-172-31-83-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.251",
            "public_dns": "ec2-44-200-192-42.compute-1.amazonaws.com",
            "public_ip": "44.200.192.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef1acd1a6e91d206",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "zookeeper-2"
            },
            "tags_all": {
              "Name": "zookeeper-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:969505754201:instance/i-09a29f08efa874afb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a29f08efa874afb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pulsar-terraform-ssh-keys-da359662",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050af8946c5c9d8eb",
            "private_dns": "ip-172-31-80-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.80.80",
            "public_dns": "ec2-44-200-176-104.compute-1.amazonaws.com",
            "public_ip": "44.200.176.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d4047e4f590614a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rabbitmq-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6e41d562",
            "tags": {
              "Name": "zookeeper-3"
            },
            "tags_all": {
              "Name": "zookeeper-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7de395777277cec"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "data.aws_security_group.default",
            "data.aws_subnet.default",
            "random_id.key_pair_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:969505754201:security-group/sg-0d2dad9cf7be28b35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2dad9cf7be28b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6650,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6650
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "pulsar-elb",
            "name_prefix": "",
            "owner_id": "969505754201",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-5a6ebf3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.pulsar_vpc"
          ]
        }
      ]
    }
  ]
}